--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   "@fortawesome/free-regular-svg-icons": "5.14.0",
   "@fortawesome/free-solid-svg-icons": "5.14.0",
   "@fortawesome/react-fontawesome": "0.1.11",
+  "autoprefixer": "^10.2.4",
   "gatsby": "2.24.53",
   "gatsby-image": "2.4.9",
+  "gatsby-plugin-postcss": "^3.7.0",
+  "postcss": "^8.2.6",
   "prop-types": "15.7.2",
   "ramda": "0.27.1",
   "react": "16.12.0",
   "react-dom": "16.12.0",
   "react-helmet": "6.1.0",
   "react-typography": "0.16.19",
+  "tailwindcss": "^2.0.3",
   "typography": "0.16.19"
  },
  "devDependencies": {
